--- a/Layout2/app/src/main/res/drawable/ic_baseline_account_circle.xml
+++ b/Layout2/app/src/main/res/drawable/ic_baseline_account_circle.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="50dp"
-    android:height="50dp"
-    android:tint="#FF5722"
+    android:width="35dp"
+    android:height="35dp"
+    android:tint="#EE6604"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
