--- a/Layout2/app/src/main/res/layout/activity_entrar.xml
+++ b/Layout2/app/src/main/res/layout/activity_entrar.xml
@@ -48,9 +48,9 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:paddingLeft="25dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
+            android:paddingTop="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="5dp"
             android:textColorHint="#fff"
             android:textSize="20sp" />
 
@@ -107,10 +107,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#fff"
-                android:text="Don't have accout?"
-                android:layout_marginTop="80dp"
+                android:text="Don't have account?"
+                android:layout_marginTop="100dp"
                 android:layout_marginLeft="185dp"
                 />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -125,7 +126,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="85dp"
+                android:layout_marginTop="105dp"
                 android:layout_marginLeft="20dp"
                 android:drawableRight="@drawable/ic_baseline_play_circle_outline"/>
 
