--- a/AtividadeLista/app/src/main/res/layout/modelo_layout.xml
+++ b/AtividadeLista/app/src/main/res/layout/modelo_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
-    android:layout_height="470dp"
+    android:layout_height="500dp"
     android:layout_gravity="center_horizontal">
 
     <LinearLayout
@@ -11,7 +11,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/img"
+            android:id="@+id/imgImagem"
             android:layout_width="350dp"
             android:layout_height="290dp"
             android:background="@drawable/TombRaider"
