--- a/AtividadeLista/app/src/main/res/layout/modelo_layout.xml
+++ b/AtividadeLista/app/src/main/res/layout/modelo_layout.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
     android:layout_height="500dp"
+    android:id="@+id/idCardView"
     android:layout_gravity="center_horizontal">
 
     <LinearLayout
@@ -18,7 +19,7 @@
             android:scaleType="centerCrop" />
 
         <me.zhanghai.android.materialratingbar.MaterialRatingBar
-            android:id="@+id/stars"
+            android:id="@+id/rtbStars"
             style="@style/Widget.MaterialRatingBar.RatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
